# CKBoost

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DEBUG_SETUP_ROOT.md  README.md  deployment-summary.md  deployments.json  jest-runner.sh  kill-jest.sh  netlify.toml
.cursor/: ckboost-platform.prd.txt
.cursor/rules/: ckb-dapp-smart-contract-development.mdc
.shrimp/CKBoost/: WebGUI.md  tasks.json
.taskmaster/: config.json  state.json
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
contracts/: Cargo.toml  Makefile  README.md  build.rs
contracts/contracts/ckboost-campaign-lock/: Cargo.toml  README.md
contracts/contracts/ckboost-campaign-lock/src/: fallback.rs  main.rs  modules.rs  recipes.rs  ssri.rs
contracts/contracts/ckboost-campaign-type/: Cargo.toml  Makefile  README.md  build.rs
contracts/contracts/ckboost-campaign-type/src/: campaign_logic.rs  error.rs  fallback.rs  lib.rs  main.rs  modules.rs  recipes.rs  ssri.rs  tests.rs
contracts/contracts/ckboost-points-udt/: Cargo.toml
contracts/contracts/ckboost-points-udt/src/: fallback.rs  main.rs  modules.rs  utils.rs
contracts/contracts/ckboost-protocol-lock/: Cargo.toml  README.md
contracts/contracts/ckboost-protocol-lock/src/: main.rs  modules.rs
contracts/contracts/ckboost-protocol-type/: Cargo.toml  README.md
contracts/contracts/ckboost-protocol-type/src/: fallback.rs  lib.rs  main.rs  modules.rs  recipes.rs  ssri.rs
contracts/contracts/ckboost-shared/: Cargo.toml  types.rs
contracts/contracts/ckboost-shared/src/: error.rs  lib.rs
contracts/contracts/ckboost-user-type/: Cargo.toml  README.md
contracts/contracts/ckboost-user-type/src/: fallback.rs  main.rs  modules.rs  recipes.rs  ssri.rs
contracts/lib/ckboost-shared/: Cargo.toml
contracts/lib/ckboost-shared/src/: error.rs  lib.rs  ssri.rs  transaction_recipe.rs  type_id.rs  types.rs
contracts/libs/ckboost-shared/: Cargo.toml  build.rs
contracts/libs/ckboost-shared/src/: cell_collector.rs  error.rs  fallback.rs  known_script.rs  lib.rs  protocol_data.rs  ssri.rs  transaction_context.rs  transaction_recipe.rs  type_id.rs  types.rs
contracts/libs/ckboost-shared/tests/: cell_collector_integration.rs  transaction_parsing_integration.rs
contracts/schemas/: ckboost.mol
contracts/tests/: Cargo.toml
contracts/tests/src/: lib.rs  protocol_type_tests.rs  test_campaign_lock.rs  test_udt_distribution.rs  test_udt_funding.rs  tests.rs  transaction_context_integration_tests.rs
dapp/: .env.example  .env.local  .env.local.example  .eslintignore  DEPLOYMENT.md  jest.config.js  jest.setup.js  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  postinstall.mjs  tsconfig.json  tsconfig.tsbuildinfo
dapp/__tests__/: README.md
dapp/app/: layout.tsx  page.tsx
dapp/app/admin/: page.tsx
dapp/app/campaign-admin/: page.tsx
dapp/app/create-campaign/: page.tsx
dapp/app/create-quest/: page.tsx
dapp/app/create-tip-proposal/: page.tsx
dapp/app/dashboard/: page.tsx
dapp/app/leaderboard/: page.tsx
dapp/app/platform-admin/: page.tsx
dapp/app/tipping/: page.tsx
dapp/app/verify/: page.tsx
dapp/components/: address-hash-tool.tsx  campaign-card.tsx  campaign-form.tsx  community-contributions.tsx  markdown-editor.tsx  navigation.tsx  nevent-parser-dialog.tsx  nostr-storage-modal.tsx  points-balance.tsx  proof-submission-modal.tsx  providers.tsx  quest-card.tsx  quest-submission-button.tsx  quest-submission-display.tsx  quest-submission-form.tsx  social-interactions.tsx  submission-content-viewer.tsx  tip-button.tsx  tip-proposal-card.tsx  tip-proposals.tsx  tip-voting.tsx  wallet-connect.tsx  wallet-provider.tsx
dapp/components/admin/: protocol-management.tsx
dapp/components/campaign/: quest-rewards-config.tsx
dapp/components/ui/: calendar.tsx
dapp/components/verify/: StatusAlert.tsx  TelegramWidgetSection.tsx  VerificationMethodCard.tsx
dapp/docs/: campaign-fetching-optimization.md  nostr-storage.md  user-cell-management.md
dapp/hooks/: use-nostr-fetch.ts  use-nostr-storage.tsx  use-udt-balance.ts
dapp/lib/: README.md  index.ts
dapp/lib/ckb/: campaign-cells.ts  deployment-manager.ts  points-balance.ts  protocol-cells.ts  protocol-deployment.ts  transaction-wrapper.ts  udt-cells.ts  user-cells.ts
dapp/lib/hooks/: use-campaign-draft.ts  use-verification.ts
dapp/lib/mock/: mock-campaigns.ts  mock-protocol.ts
dapp/lib/providers/: campaign-admin-provider.tsx  campaign-provider.tsx  funding-provider.tsx  nostr-provider.tsx  protocol-provider.tsx  storage-modal-provider.tsx  user-provider.tsx
dapp/lib/services/: campaign-admin-service.ts  campaign-service.ts  funding-service.ts  nostr-storage-service.ts  protocol-service-old.ts  protocol-service.ts  test-token-service.ts  udt-registry.ts  user-service.ts
dapp/lib/types/: campaign.ts  index.ts  protocol.ts  verify.ts
dapp/lib/utils/: README.md  address-utils.ts  campaign-draft-storage.ts  campaign-utils.ts  debug.ts  ssri-error-handler.ts  type-converters.ts
dapp/netlify/functions/: telegram-authenticate.ts  telegram-webhook.ts
dapp/scripts/: generate-types.js  install-build-tools.sh
dapp/types/: submission.ts
docs/: background-catalyst-program.md  ckboost-brownfield.prd.txt  ckboost-platform.prd.txt  combined-mol.mol  contract-architecture.md  grant-proposal-zh.md  grant-proposal.md  implementation_notes.md  integration-architecture.md  milestone-1-testing-guideline.md  protocol-deployment-guide.md  telegram.md  udt-funding-integration-test.md  udt-integration-refactor-summary.md
docs/milestones/: 250822.md  Milestone 1 - Follow Ups.md  Milestone 1 - Preview.md  Milestone 1 - Report.md  Milestone 1 - Testing Guidelines.md
docs/recipes/: README.md
docs/recipes/campaigns/: create_campaign.yaml  update_campaign.yaml
docs/recipes/campaigns-admin/: update_campaign.yaml
docs/recipes/quests/: create_quest.yaml  (+1 more)
schemas/: ckboost.mol
scripts/debugger/: README.md  debug-tx.ts  package.json  pnpm-lock.yaml  raw_tx_input.json  tx_hex.txt
scripts/deployment/: README.md  deploy-contracts.sh  update-env.sh
(+63 files in other folders)
