[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "libs/ckboost-shared",
  "contracts/ckboost-user-type",
  "contracts/ckboost-protocol-lock",
  "contracts/ckboost-protocol-type",
  "contracts/ckboost-campaign-lock",
  "contracts/ckboost-campaign-type",
  "contracts/ckboost-points-udt",
  "tests",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
