[package]
name = "ckboost-campaign-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.16.4", features = ["allocator", "ckb-types", "dummy-atomic"] }
ckb_deterministic = { path = "../../../../ckb_deterministic/ckb_deterministic", default-features = false }
ckboost-shared = { path = "../../libs/ckboost-shared" }


[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
