[package]
name = "ckboost-protocol-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.16.4", features = ["allocator", "ckb-types", "dummy-atomic"] }

ckboost-shared = { path = "../ckboost-shared" }

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
