[package]
name = "ckboost-protocol-type"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.16.4", features = ["allocator", "ckb-types", "dummy-atomic"] }
ckboost-shared = { path = "../ckboost-shared" }
molecule = { version = "0.9.0", default-features = false, features = ["bytes_vec"] }
ckb-ssri-std = { version = "0.0.1" }
ckb-ssri-std-proc-macro = { version = "0.0.1" }

