[package]
name = "ckboost-protocol-type"
version = "0.1.0"
edition = "2021"

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]

[dependencies]
ckb-std = { version = "0.16.4", features = ["allocator", "ckb-types", "dummy-atomic"] }
ckboost-shared = { path = "../../libs/ckboost-shared" }
ckb_deterministic = { path = "../../../../ckb_deterministic/ckb_deterministic" }
molecule = { version = "0.8.0", default-features = false, features = ["bytes_vec"] }
ckb-ssri-std = { version = "0.0.1" }
ckb-ssri-std-proc-macro = { version = "0.0.1" }

