[package]
name = "ckboost-shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[build-dependencies]
moleculec = "0.9.0"

[dependencies]
ckb-std = "0.17.0"
molecule = { version = "0.9.0", default-features = false }
ckb-ssri-std = { version = "0.0.1", optional = true }
ckb-ssri-std-proc-macro = { version = "0.0.1", optional = true }

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]