[package]
name = "ckboost-shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[build-dependencies]
moleculec = "0.9.0"

[dependencies]
ckb-std = { version = "0.16.4", features = ["allocator", "ckb-types", "dummy-atomic"] }
molecule = { version = "0.8.0", default-features = false, features = ["bytes_vec"] }
ckb-ssri-std = { version = "0.0.1" }
ckb-ssri-std-proc-macro = { version = "0.0.1" }
blake2b-ref = "0.3.1"
ckb_deterministic = { path = "../../../../ckb_deterministic/ckb_deterministic" }
